--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "128": "/images/favicon-128x128.png"
   },
   "homepage_url": "https://moz.one/",
-  "permissions": ["storage", "tabs", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "commands": {
     "_execute_action": {
       "suggested_key": {
